# vkuswill_bot

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PHASE0_BASELINE_VARIANT_E.md  README.md  RECOMMENDATIONS.md  REVIEW.md  ROADMAP.md  ROADMAP_DEV.md  SECURITY_AUDIT.md  docker-compose.yml  pyproject.toml  run.sh  stop.sh
.cursor/rules/: README.md  devops-agent.mdc  git-branches.mdc  git-code-review.mdc  git-commits.mdc  git-pull-requests.mdc  git-versioning.mdc  testing-agent.mdc
.cursor/skills/code-reviewer/: CHECKLIST.md  SKILL.md  STANDARDS.md
.cursor/skills/refactoring-agent/: CHECKLIST.md  PATTERNS.md  SKILL.md
.githooks/: commit-msg  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  release.yml
articles/: 01-hook.md
deploy/: ALICE_SKILL_DEPLOY.md  deploy.sh  nginx-bot.conf  setup-selfsigned-ssl.sh  setup-ssl.sh
docs/: ADR-001-scaling-persistence.md  ANALYTICS_PLAN.md  PRIVACY_POLICY.md  RECOMMENDATIONS.md  ROADMAP_DEV.md  SECURITY_AUDIT.md
infra/: .terraform.lock.hcl  alice_function.tf  backend.tf  bootstrap.sh  cloud-init.yaml  cr.tf  lockbox.tf  main.tf  network.tf  outputs.tf  postgres.tf  redis.tf  s3_logs.tf  sa.tf  terraform.tfvars.example  tfplan  variables.tf  vm.tf
loadtests/: README.md  locustfile.py  service_load_test.py  telegram_load_test.py
migrations/: 001_create_users.sql  002_create_langfuse_db.sh  003_daily_stats.sql  004_add_cart_limits.sql  005_add_user_events_index.sql  006_anonymize_pii.sql  007_add_consent.sql  008_voice_account_linking.sql  009_freemium_trial_feedback_referral.sql  010_daily_stats_freemium_extensions.sql
scripts/: build_alice_function_zip.sh  setup_langfuse_models.py  setup_metabase_dashboards.py
src/vkuswill_bot/: __main__.py  config.py
src/vkuswill_bot/alice_skill/: __init__.py  account_linking.py  delivery.py  handler.py  idempotency.py  models.py  orchestrator.py  rate_limit.py  voice_order_client.py
src/vkuswill_bot/bot/: handlers.py  middlewares.py
src/vkuswill_bot/mcp_server/: __init__.py  __main__.py  server.py
src/vkuswill_bot/services/: cart_processor.py  cart_snapshot_store.py  chat_engine.py  dialog_manager.py  gigachat_service.py  langfuse_tracing.py  mcp_client.py  migration_runner.py  nutrition_service.py  pii_utils.py  preferences_store.py  price_cache.py  prompts.py  recipe_search.py  recipe_service.py  recipe_store.py  redis_client.py  redis_dialog_manager.py  s3_log_handler.py  search_processor.py  stats_aggregator.py  tool_executor.py  user_store.py  voice_link_api.py
tests/: PERSONA_LIVE_RESULTS.md  PERSONA_TEST_REPORT.md  TEST_QUERIES.md  conftest.py  helpers.py  persona_live_test.py  test_admin_commands.py  test_ai_safety.py  test_alice_skill.py  test_cart_processor.py  test_cart_snapshot_store.py  test_config_security.py  test_dialog_manager.py  test_gigachat_service.py  test_handlers.py  test_input_validation.py  test_main_health.py  test_mcp_client.py  test_mcp_server.py  test_mcp_server_main.py  test_middlewares.py  test_migration_runner.py  test_nutrition_service.py  test_preferences_store.py  test_price_cache.py  test_prompts.py  test_recipe_search.py  test_recipe_service.py  test_recipe_store.py  test_redis_client.py  test_redis_dialog_manager.py  test_s3_log_handler.py  test_search_processor.py  test_security_sast.py  test_stats_aggregator.py  test_tool_executor.py  test_two_level_price_cache.py  test_user_middleware.py  test_user_store.py  test_voice_link_api.py
