[project]
name = "vkuswill-bot"
version = "0.1.0"
description = "Telegram-бот для заказа продуктов из ВкусВилл с GigaChat и MCP"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15",
    "gigachat>=0.1.36",
    "mcp>=1.9",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vkuswill_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/vkuswill_bot"]
omit = ["src/vkuswill_bot/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
