[project]
name = "vkuswill-bot"
version = "0.3.0"
description = "Telegram-бот для заказа продуктов из ВкусВилл с GigaChat и MCP"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15",
    "aiosqlite>=0.20",
    "gigachat>=0.1.36",
    "mcp>=1.9",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-cov>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
dev = [
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vkuswill_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "security: SAST-тесты безопасности кода",
    "ai_safety: тесты безопасности ИИ-ассистента",
    "validation: тесты валидации входных данных",
]

[tool.coverage.run]
source = ["src/vkuswill_bot"]
omit = ["src/vkuswill_bot/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
