[project]
name = "vkuswill-bot"
version = "0.5.2"
description = "Telegram-бот для заказа продуктов из ВкусВилл с GigaChat и MCP"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15",
    "aiosqlite>=0.20",
    "gigachat>=0.1.36",
    "mcp>=1.9",
    "pydantic-settings>=2.0",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.29",
    "boto3>=1.35",
    "langfuse>=2.60,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-cov>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
dev = [
    "ruff>=0.8",
]
loadtest = [
    "locust>=2.29",
    "telethon>=1.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vkuswill_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

ignore = [
    "S101",   # assert в тестах OK
    "S104",   # possible binding to all interfaces (для webhook 0.0.0.0)
    "RUF001", # ambiguous unicode — кириллица в строках OK
    "RUF002", # ambiguous unicode — кириллица в docstrings OK
    "RUF003", # ambiguous unicode — кириллица в комментариях OK
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]  # assert и hardcoded passwords в тестах OK
"__main__.py" = ["S104"]       # bind 0.0.0.0 для webhook OK

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "security: SAST-тесты безопасности кода",
    "ai_safety: тесты безопасности ИИ-ассистента",
    "validation: тесты валидации входных данных",
]

[tool.coverage.run]
source = ["src/vkuswill_bot"]
omit = ["src/vkuswill_bot/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
